<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relLayToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/toolbar_color"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:contentDescription="@string/str_image_content_description_back_arrow"
            android:src="@drawable/ic_arrow_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/segoe_ui_semi_bold"
            android:text="@string/str_settings"
            android:textColor="@color/white_dark"
            android:textSize="@dimen/dimen_22sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relLayToolbar"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_transparent"
            android:fontFamily="@font/segoe_ui_semi_bold"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/str_edit_crew_details"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            app:drawableEndCompat="@drawable/ic_forward_arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/rectangle_transparent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_semi_bold"
                android:text="@string/str_queue_status"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:fontFamily="@font/segoe_ui_regular"
                android:text="@string/str_all_updates_synced"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/rectangle_transparent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_semi_bold"
                android:text="@string/str_environment"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:fontFamily="@font/segoe_ui_regular"
                android:text="@string/str_operations"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/rectangle_transparent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:fontFamily="@font/segoe_ui_semi_bold"
                android:text="@string/str_conference"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_regular"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:text="@string/str_start_with_video_muted"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:id="@+id/txtStartWithAudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:fontFamily="@font/segoe_ui_regular"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:text="@string/str_start_with_audio_muted"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:id="@+id/txtStartWithChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:fontFamily="@font/segoe_ui_regular"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:text="@string/str_start_with_chat"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/rectangle_transparent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_semi_bold"
                android:text="@string/str_version"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:fontFamily="@font/segoe_ui_regular"
                android:text="@string/str__1_0_0"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>